--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0px;
 }
 
+html, body{
+    height: 100px;
+}
 nav{
     width: 100%;
     height: 70px;
@@ -89,7 +92,6 @@ footer ul{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
     height: 80px;
     background-color: #000;
     color: white;
